<resources>
    <string name="app_name">TaplalkozasKoveto</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="taplalkozas_koveto">Táplálkozás követő</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="calories">Calories (kcal)</string>
    <string name="protein_g">Protein (g)</string>
    <string name="fiber_g">Fiber (g)</string>
    <string name="fat_g">Fat (g)</string>
    <string name="food_name">Food Name</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="mai_beviteled">Today\'s Intake</string>
    <string name="number_of_records">Number of all records</string>
    <string name="preferred_calories">Preferred Calories:</string>
    <string name="preferred_protein">Preferred Protein:</string>
    <string name="preferred_fiber">Preferred fiber:</string>
    <string name="preferred_fat">Preferred Fat:</string>
    <string name="back">Back</string>
</resources>